Fix horizontal offset scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,12 @@
 
 #container {
     display: flex;
-    height: 100vh;
+    height: max(100vh, 600px);
 }
 
 #hero-container {
     position: relative;
+
 }
 
 #logo-container {
